Add header html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,39 @@
         <meta charset="utf-8">
     </head>
     <body>
-        
+        <header>
+            <section class="search">
+                <div class="search-icon">
+
+                </div>
+                <div class="search-bar">
+
+                </div>
+            </section>            
+            <menu>
+                <div class="notification-icon">
+
+                </div>
+                <div class="profile-icon">
+
+                </div>
+                <div class="profile-name">
+
+                </div>
+            </menu>
+            <section class="profile">
+                <div class="profile-icon">
+
+                </div>
+                <div class="profile-name">
+                    
+                </div>
+            </section>
+            <nav>
+                <button class="new-button"></button>
+                <button class="upload-button"></button>
+                <button class="share-button"></button>
+            </nav>
+        </header>
     </body>
 </html>
