Add sidebar html

--- a/index.html
+++ b/index.html
@@ -6,38 +6,65 @@
     </head>
     <body>
         <header>
-            <section class="search">
+            <div class="search">
                 <div class="search-icon">
 
                 </div>
                 <div class="search-bar">
 
                 </div>
-            </section>            
+            </div>            
             <menu>
-                <div class="notification-icon">
+                <li class="notification-icon">
 
-                </div>
-                <div class="profile-icon">
+                </li>
+                <li class="profile-icon">
 
-                </div>
-                <div class="profile-name">
+                </li>
+                <li class="profile-name">
 
-                </div>
+                </li>
             </menu>
-            <section class="profile">
+            <div class="profile">
                 <div class="profile-icon">
 
                 </div>
                 <div class="profile-name">
-                    
+
                 </div>
-            </section>
-            <nav>
-                <button class="new-button"></button>
-                <button class="upload-button"></button>
-                <button class="share-button"></button>
-            </nav>
+            </div>
+            <menu>
+                <li><button type="button" class="new"></button></li>
+                <li><button type="button" class="upload"></button></li>
+                <li><button type="button" class="share"></button></li>
+            </menu>
         </header>
+        <div class="sidebar">
+            <div class="dashboard-logo">
+                <div class="dashboard-icon">
+
+                </div>
+                <div class="dashboard-name">
+
+                </div>
+            </div>
+            <nav class="pages">
+                <ul>
+                    <li class="home"></li>
+                    <li class="profile"></li>
+                    <li class="messages"></li>
+                    <li class="history"></li>
+                    <li class="tasks"></li>
+                    <li class="communities"></li>
+                </ul>
+            </nav>
+            <nav class="settings">
+                <ul>
+                    <li class="settings"></li>
+                    <li class="support"></li>
+                    <li class="privacy"></li>
+                </ul>
+            </nav>
+        </div>
     </body>
 </html>
