Add html content

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <header>
             <div class="search">
                 <div class="search-icon">
-
+                    <button type="submit"></button>
                 </div>
                 <div class="search-bar">
-
+                    <input type="search" name="search" id="search">
                 </div>
             </div>            
             <menu>
@@ -19,24 +19,25 @@
 
                 </li>
                 <li class="profile-icon">
-
+                    <img src="./img/icon.png" alt="User profile icon.">
                 </li>
                 <li class="profile-name">
-
+                    Hamilton de Souza
                 </li>
             </menu>
             <div class="profile">
                 <div class="profile-icon">
-
+                    <img src="./img/icon.png" alt="User profile icon.">
                 </div>
+                <div class="greeting">Hi there,</div>
                 <div class="profile-name">
-
+                    Hamilton de Souza (@hamilton)
                 </div>
             </div>
-            <menu>
-                <li><button type="button" class="new"></button></li>
-                <li><button type="button" class="upload"></button></li>
-                <li><button type="button" class="share"></button></li>
+            <menu class="content-interaction">
+                <li><button type="button" class="new">New</button></li>
+                <li><button type="button" class="upload">Upload</button></li>
+                <li><button type="button" class="share">Share</button></li>
             </menu>
         </header>
         <div class="sidebar">
@@ -45,24 +46,24 @@
 
                 </div>
                 <div class="dashboard-name">
-
+                    Dashboard
                 </div>
             </div>
             <nav class="pages">
                 <ul>
-                    <li class="home"></li>
-                    <li class="profile"></li>
-                    <li class="messages"></li>
-                    <li class="history"></li>
-                    <li class="tasks"></li>
-                    <li class="communities"></li>
+                    <li class="home">Home</li>
+                    <li class="profile">Profile</li>
+                    <li class="messages">Messages</li>
+                    <li class="history">History</li>
+                    <li class="tasks">Tasks</li>
+                    <li class="communities">Communities</li>
                 </ul>
             </nav>
             <nav class="settings">
                 <ul>
-                    <li class="settings"></li>
-                    <li class="support"></li>
-                    <li class="privacy"></li>
+                    <li class="settings">Settings</li>
+                    <li class="support">Support</li>
+                    <li class="privacy">Privacy</li>
                 </ul>
             </nav>
         </div>
