Add projects html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                 </li>
                 <li class="profile-icon">
-                    <img src="./img/icon.png" alt="User profile icon.">
+                    <img src="./img/hamilton-icon.png" alt="User profile icon.">
                 </li>
                 <li class="profile-name">
                     Hamilton de Souza
@@ -27,7 +27,7 @@
             </menu>
             <div class="profile">
                 <div class="profile-icon">
-                    <img src="./img/icon.png" alt="User profile icon.">
+                    <img src="./img/hamilton-icon.png" alt="User profile icon.">
                 </div>
                 <div class="greeting">Hi there,</div>
                 <div class="profile-name">
@@ -35,9 +35,9 @@
                 </div>
             </div>
             <menu class="content-interaction">
-                <li><button type="button" class="new">New</button></li>
-                <li><button type="button" class="upload">Upload</button></li>
-                <li><button type="button" class="share">Share</button></li>
+                <li><button type="button" class="new-button">New</button></li>
+                <li><button type="button" class="upload-button">Upload</button></li>
+                <li><button type="button" class="share-button">Share</button></li>
             </menu>
         </header>
         <div class="sidebar">
@@ -66,6 +66,92 @@
                     <li class="privacy">Privacy</li>
                 </ul>
             </nav>
+        </div>
+        <div class="main-content">
+            <div class="your-projects">
+                <div class="content-title">Your Projects</div>
+                <div class="project-card">
+                    <div class="project-title">
+                        Super Cool Project
+                    </div>
+                    <div class="project-description">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum et quo, a ea nobis molestias.
+                    </div>
+                    <div class="project-interaction">
+                        <button type="button" class="favorite-icon"></button>
+                        <button type="button" class="seen-icon"></button>
+                        <button type="button" class="share-icon"></button>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-title">
+                        Less Cool Project
+                    </div>
+                    <div class="project-description">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, atque rem esse tempore deleniti vitae officia obcaecati at, eligendi praesentium nihil harum odit illum laudantium facere!
+                    </div>
+                    <div class="project-interaction">
+                        <button type="button" class="favorite-icon"></button>
+                        <button type="button" class="seen-icon"></button>
+                        <button type="button" class="share-icon"></button>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-title">
+                        Impossible App
+                    </div>
+                    <div class="project-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit itaque unde cumque praesentium illo!
+                    </div>
+                    <div class="project-interaction">
+                        <button type="button" class="favorite-icon"></button>
+                        <button type="button" class="seen-icon"></button>
+                        <button type="button" class="share-icon"></button>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-title">
+                        Easy Peasy App
+                    </div>
+                    <div class="project-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quidem, dicta adipisci fugiat dignissimos quae mollitia porro nisi ipsum eius repudiandae animi?
+                    </div>
+                    <div class="project-interaction">
+                        <button type="button" class="favorite-icon"></button>
+                        <button type="button" class="seen-icon"></button>
+                        <button type="button" class="share-icon"></button>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-title">
+                        Ad Blocker
+                    </div>
+                    <div class="project-description">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci tenetur minima nisi vero officiis, facere sapiente maxime quas?
+                    </div>
+                    <div class="project-interaction">
+                        <button type="button" class="favorite-icon"></button>
+                        <button type="button" class="seen-icon"></button>
+                        <button type="button" class="share-icon"></button>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-title">
+                        Money Maker
+                    </div>
+                    <div class="project-description">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet quis quod dignissimos sit repellendus architecto aspernatur voluptates hic earum dolor, asperiores molestiae in!
+                    </div>
+                    <div class="project-interaction">
+                        <button type="button" class="favorite-icon"></button>
+                        <button type="button" class="seen-icon"></button>
+                        <button type="button" class="share-icon"></button>
+                    </div>
+                </div>
+            </div>
+            <div class="announcements"></div>
+            <div class="trending-projects">
+            </div>
         </div>
     </body>
 </html>
