--- a/index.html
+++ b/index.html
@@ -149,7 +149,37 @@
                     </div>
                 </div>
             </div>
-            <div class="announcements"></div>
+            <div class="announcements">
+                <div class="content-title">
+                    Announcements
+                </div>
+                <div class="announcements-board">
+                    <div class="announcement">
+                        <div class="announcement-title">
+                            Site Maintenance
+                        </div>
+                        <div class="announcement-content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam adipisci recusandae dicta dolorib...
+                        </div>
+                    </div>
+                    <div class="announcement">
+                        <div class="announcement-title">
+                            Community Share Day
+                        </div>
+                        <div class="announcement-content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum maxime ipsa temporibus similique...
+                        </div>
+                    </div>
+                    <div class="announcement">
+                        <div class="announcement-title">
+                            Updated Privacy Policy
+                        </div>
+                        <div class="announcement-content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo placeat fugit corrupti, impedi....
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="trending-projects">
             </div>
         </div>
