Add trending html

--- a/index.html
+++ b/index.html
@@ -181,6 +181,44 @@
                 </div>
             </div>
             <div class="trending-projects">
+                <div class="trending-projects">
+                    <div class="world-peace-builder">
+                        <img src="./img/tegan-icon.jpg" alt="Another user profile icon.">
+                        <div class="trending-profile-name">
+                            @tegan
+                        </div>
+                        <div class="trending-project-name">
+                            world-peace-builder
+                        </div>
+                    </div>
+                    <div class="super-cool-project">
+                        <img src="./img/hamilton-icon.jpg" alt="User profile icon.">
+                        <div class="trending-profile-name">
+                            @hamilton
+                        </div>
+                        <div class="trending-project-name">
+                            super-cool-project
+                        </div>
+                    </div>
+                    <div class="life-changing-app">
+                        <img src="./img/kendall-icon.jpg" alt="Another user profile icon.">
+                        <div class="trending-profile-name">
+                            @kendall
+                        </div>
+                        <div class="trending-project-name">
+                            life-changing-app
+                        </div>
+                    </div>
+                    <div class="no-traffic-maker">
+                        <img src="./img/alex-icon.jpg" alt="Another user profile icon.">
+                        <div class="trending-profile-name">
+                            @alex
+                        </div>
+                        <div class="trending-project-name">
+                            no-traffic-maker
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
