--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <title>Odin | Admin Dashboard</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     </head>
     <body>
         <header>
             <div class="search">
                 <div class="search-icon">
-                    <button type="submit"></button>
+                    <button type="submit"><span class="material-symbols-outlined">search</span></button>
                 </div>
                 <div class="search-bar">
                     <input type="search" name="search" id="search">
@@ -51,19 +52,64 @@
             </div>
             <nav class="pages">
                 <ul>
-                    <li class="home">Home</li>
-                    <li class="profile">Profile</li>
-                    <li class="messages">Messages</li>
-                    <li class="history">History</li>
-                    <li class="tasks">Tasks</li>
-                    <li class="communities">Communities</li>
+                    <li class="home">
+                        <button type="button" class="home-button">
+                            <span class="material-symbols-outlined">home</span>
+                            Home
+                        </button>
+                    </li>
+                    <li class="profile">
+                        <button type="button" class="profile-button">
+                            <span class="material-symbols-outlined">id_card</span>
+                            Profile
+                        </button>   
+                    </li>
+                    <li class="messages">
+                        <button type="button" class="messages-button">
+                            <span class="material-symbols-outlined">chat</span>
+                            Messages
+                        </button>
+                    </li>
+                    <li class="history">
+                        <button type="button" class="history-button">
+                            <span class="material-symbols-outlined">history</span>
+                            History
+                        </button>
+                    </li>
+                    <li class="tasks">
+                        <button type="button" class="tasks-button">
+                            <span class="material-symbols-outlined">file_copy</span>
+                            Tasks
+                        </button>
+                    </li>
+                    <li class="communities">
+                        <button type="button" class="communities-button">
+                            <span class="material-symbols-outlined">groups</span>
+                            Communities
+                        </button>
+                    </li>
                 </ul>
             </nav>
             <nav class="settings">
                 <ul>
-                    <li class="settings">Settings</li>
-                    <li class="support">Support</li>
-                    <li class="privacy">Privacy</li>
+                    <li class="settings">
+                        <button type="button" class="settings-button">
+                            <span class="material-symbols-outlined">settings</span>
+                            Settings
+                        </button>
+                    </li>
+                    <li class="support">
+                        <button type="button" class="support-button">
+                            <span class="material-symbols-outlined">help_center</span>
+                            Support
+                        </button>
+                    </li>
+                    <li class="privacy">
+                        <button type="button" class="privacy-button">
+                            <span class="material-symbols-outlined">verified_user</span>
+                            Privacy
+                        </button>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -78,9 +124,15 @@
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum et quo, a ea nobis molestias.
                     </div>
                     <div class="project-interaction">
-                        <button type="button" class="favorite-icon"></button>
-                        <button type="button" class="seen-icon"></button>
-                        <button type="button" class="share-icon"></button>
+                        <button type="button" class="favorite-icon">
+                            <span class="material-symbols-outlined">heart_plus</span>
+                        </button>
+                        <button type="button" class="seen-icon">
+                            <span class="material-symbols-outlined">visibility</span>
+                        </button>
+                        <button type="button" class="share-icon">
+                            <span class="material-symbols-outlined">share</span>
+                        </button>
                     </div>
                 </div>
                 <div class="project-card">
@@ -91,9 +143,15 @@
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, atque rem esse tempore deleniti vitae officia obcaecati at, eligendi praesentium nihil harum odit illum laudantium facere!
                     </div>
                     <div class="project-interaction">
-                        <button type="button" class="favorite-icon"></button>
-                        <button type="button" class="seen-icon"></button>
-                        <button type="button" class="share-icon"></button>
+                        <button type="button" class="favorite-icon">
+                            <span class="material-symbols-outlined">heart_plus</span>
+                        </button>
+                        <button type="button" class="seen-icon">
+                            <span class="material-symbols-outlined">visibility</span>
+                        </button>
+                        <button type="button" class="share-icon">
+                            <span class="material-symbols-outlined">share</span>
+                        </button>
                     </div>
                 </div>
                 <div class="project-card">
@@ -104,9 +162,15 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit itaque unde cumque praesentium illo!
                     </div>
                     <div class="project-interaction">
-                        <button type="button" class="favorite-icon"></button>
-                        <button type="button" class="seen-icon"></button>
-                        <button type="button" class="share-icon"></button>
+                        <button type="button" class="favorite-icon">
+                            <span class="material-symbols-outlined">heart_plus</span>
+                        </button>
+                        <button type="button" class="seen-icon">
+                            <span class="material-symbols-outlined">visibility</span>
+                        </button>
+                        <button type="button" class="share-icon">
+                            <span class="material-symbols-outlined">share</span>
+                        </button>
                     </div>
                 </div>
                 <div class="project-card">
@@ -117,9 +181,15 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quidem, dicta adipisci fugiat dignissimos quae mollitia porro nisi ipsum eius repudiandae animi?
                     </div>
                     <div class="project-interaction">
-                        <button type="button" class="favorite-icon"></button>
-                        <button type="button" class="seen-icon"></button>
-                        <button type="button" class="share-icon"></button>
+                        <button type="button" class="favorite-icon">
+                            <span class="material-symbols-outlined">heart_plus</span>
+                        </button>
+                        <button type="button" class="seen-icon">
+                            <span class="material-symbols-outlined">visibility</span>
+                        </button>
+                        <button type="button" class="share-icon">
+                            <span class="material-symbols-outlined">share</span>
+                        </button>
                     </div>
                 </div>
                 <div class="project-card">
@@ -130,9 +200,15 @@
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci tenetur minima nisi vero officiis, facere sapiente maxime quas?
                     </div>
                     <div class="project-interaction">
-                        <button type="button" class="favorite-icon"></button>
-                        <button type="button" class="seen-icon"></button>
-                        <button type="button" class="share-icon"></button>
+                        <button type="button" class="favorite-icon">
+                            <span class="material-symbols-outlined">heart_plus</span>
+                        </button>
+                        <button type="button" class="seen-icon">
+                            <span class="material-symbols-outlined">visibility</span>
+                        </button>
+                        <button type="button" class="share-icon">
+                            <span class="material-symbols-outlined">share</span>
+                        </button>
                     </div>
                 </div>
                 <div class="project-card">
@@ -143,9 +219,15 @@
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet quis quod dignissimos sit repellendus architecto aspernatur voluptates hic earum dolor, asperiores molestiae in!
                     </div>
                     <div class="project-interaction">
-                        <button type="button" class="favorite-icon"></button>
-                        <button type="button" class="seen-icon"></button>
-                        <button type="button" class="share-icon"></button>
+                        <button type="button" class="favorite-icon">
+                            <span class="material-symbols-outlined">heart_plus</span>
+                        </button>
+                        <button type="button" class="seen-icon">
+                            <span class="material-symbols-outlined">visibility</span>
+                        </button>
+                        <button type="button" class="share-icon">
+                            <span class="material-symbols-outlined">share</span>
+                        </button>
                     </div>
                 </div>
             </div>
