Add profile icons

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 </li>
                 <li class="profile-icon">
-                    <img src="./img/hamilton-icon.png" alt="User profile icon.">
+                    <img src="./img/hamilton-icon.jpg" alt="Hamilton profile icon.">
                 </li>
                 <li class="profile-name">
                     Hamilton de Souza
@@ -28,7 +28,7 @@
             </menu>
             <div class="profile">
                 <div class="profile-icon">
-                    <img src="./img/hamilton-icon.png" alt="User profile icon.">
+                    <img src="./img/hamilton-icon.jpg" alt="Hamilton profile icon.">
                 </div>
                 <div class="greeting">Hi there,</div>
                 <div class="profile-name">
@@ -264,17 +264,8 @@
             </div>
             <div class="trending-projects">
                 <div class="trending-projects">
-                    <div class="world-peace-builder">
-                        <img src="./img/tegan-icon.jpg" alt="Another user profile icon.">
-                        <div class="trending-profile-name">
-                            @tegan
-                        </div>
-                        <div class="trending-project-name">
-                            world-peace-builder
-                        </div>
-                    </div>
                     <div class="super-cool-project">
-                        <img src="./img/hamilton-icon.jpg" alt="User profile icon.">
+                        <img src="./img/hamilton-icon.jpg" alt="Hamilton profile icon.">
                         <div class="trending-profile-name">
                             @hamilton
                         </div>
@@ -283,21 +274,30 @@
                         </div>
                     </div>
                     <div class="life-changing-app">
-                        <img src="./img/kendall-icon.jpg" alt="Another user profile icon.">
+                        <img src="./img/jiraiya-icon.jpg" alt="Jiraiya profile icon.">
                         <div class="trending-profile-name">
-                            @kendall
+                            @jiraiya
                         </div>
                         <div class="trending-project-name">
                             life-changing-app
                         </div>
                     </div>
                     <div class="no-traffic-maker">
-                        <img src="./img/alex-icon.jpg" alt="Another user profile icon.">
+                        <img src="./img/immperatriz-icon.jpg" alt="Alisha profile icon.">
                         <div class="trending-profile-name">
-                            @alex
+                            @immperatriz
                         </div>
                         <div class="trending-project-name">
                             no-traffic-maker
+                        </div>
+                    </div>
+                    <div class="world-peace-builder">
+                        <img src="./img/alysha-icon.jpg" alt="Alysha profile icon.">
+                        <div class="trending-profile-name">
+                            @alysha
+                        </div>
+                        <div class="trending-project-name">
+                            world-peace-builder
                         </div>
                     </div>
                 </div>
