--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Odin | Admin Dashboard</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <header>
