--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                     <input type="search" name="search" id="search">
                 </div>
             </div>            
-            <menu>
+            <menu class="user-menu">
                 <li class="notification-icon">
-
+                    <span class="material-symbols-outlined">notifications_active</span>
                 </li>
                 <li class="profile-icon">
                     <img src="./img/hamilton-icon.jpg" alt="Hamilton profile icon.">
