Add profile grid

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="profile-icon">
                     <img src="./img/hamilton-icon.jpg" alt="Hamilton profile icon.">
                 </div>
-                <div class="greeting">Hi there,</div>
+                <div class="profile-greeting">Hi there,</div>
                 <div class="profile-name">
                     Hamilton de Souza (@hamilton)
                 </div>
