Improve class names

--- a/index.html
+++ b/index.html
@@ -53,37 +53,37 @@
             </div>
             <nav class="pages">
                 <ul>
-                    <li class="home">
+                    <li class="home-page">
                         <button type="button" class="home-button">
                             <span class="material-symbols-outlined">home</span>
                             Home
                         </button>
                     </li>
-                    <li class="profile">
+                    <li class="profile-page">
                         <button type="button" class="profile-button">
                             <span class="material-symbols-outlined">id_card</span>
                             Profile
                         </button>   
                     </li>
-                    <li class="messages">
+                    <li class="messages-page">
                         <button type="button" class="messages-button">
                             <span class="material-symbols-outlined">chat</span>
                             Messages
                         </button>
                     </li>
-                    <li class="history">
+                    <li class="history-page">
                         <button type="button" class="history-button">
                             <span class="material-symbols-outlined">history</span>
                             History
                         </button>
                     </li>
-                    <li class="tasks">
+                    <li class="tasks-page">
                         <button type="button" class="tasks-button">
                             <span class="material-symbols-outlined">file_copy</span>
                             Tasks
                         </button>
                     </li>
-                    <li class="communities">
+                    <li class="communities-page">
                         <button type="button" class="communities-button">
                             <span class="material-symbols-outlined">groups</span>
                             Communities
@@ -91,21 +91,21 @@
                     </li>
                 </ul>
             </nav>
-            <nav class="settings">
+            <nav class="settings-pages">
                 <ul>
-                    <li class="settings">
+                    <li class="settings-page">
                         <button type="button" class="settings-button">
                             <span class="material-symbols-outlined">settings</span>
                             Settings
                         </button>
                     </li>
-                    <li class="support">
+                    <li class="support-page">
                         <button type="button" class="support-button">
                             <span class="material-symbols-outlined">help_center</span>
                             Support
                         </button>
                     </li>
-                    <li class="privacy">
+                    <li class="privacy-page">
                         <button type="button" class="privacy-button">
                             <span class="material-symbols-outlined">verified_user</span>
                             Privacy
