Add trending project grid

--- a/index.html
+++ b/index.html
@@ -264,8 +264,10 @@
                 </div>
             </div>
             <div class="trending-projects">
-                <div class="super-cool-project">
-                    <img src="./img/hamilton-icon.jpg" alt="Hamilton profile icon.">
+                <div class="trending-project">
+                    <div class="trending-profile-icon">
+                        <img src="./img/hamilton-icon.jpg" alt="Hamilton profile icon.">
+                    </div>
                     <div class="trending-profile-name">
                         @hamilton
                     </div>
@@ -273,8 +275,10 @@
                         super-cool-project
                     </div>
                 </div>
-                <div class="life-changing-app">
-                    <img src="./img/jiraiya-icon.jpg" alt="Jiraiya profile icon.">
+                <div class="trending-project">
+                    <div class="trending-profile-icon">
+                        <img src="./img/jiraiya-icon.jpg" alt="Jiraiya profile icon.">
+                    </div>
                     <div class="trending-profile-name">
                         @jiraiya
                     </div>
@@ -282,8 +286,10 @@
                         life-changing-app
                     </div>
                 </div>
-                <div class="no-traffic-maker">
-                    <img src="./img/immperatriz-icon.jpg" alt="Alisha profile icon.">
+                <div class="trending-project">
+                    <div class="trending-profile-icon">
+                        <img src="./img/immperatriz-icon.jpg" alt="Immperatriz profile icon.">
+                    </div>
                     <div class="trending-profile-name">
                         @immperatriz
                     </div>
@@ -291,8 +297,10 @@
                         no-traffic-maker
                     </div>
                 </div>
-                <div class="world-peace-builder">
-                    <img src="./img/alysha-icon.jpg" alt="Alysha profile icon.">
+                <div class="trending-project">
+                    <div class="trending-profile-icon">
+                        <img src="./img/alysha-icon.jpg" alt="Alysha profile icon.">
+                    </div>
                     <div class="trending-profile-name">
                         @alysha
                     </div>
