Add profile style

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <li class="notification-icon">
                     <span class="material-symbols-outlined">notifications_active</span>
                 </li>
-                <li class="profile-icon">
+                <li class="user-menu-profile-icon">
                     <img src="./img/hamilton-icon.jpg" alt="Hamilton profile icon.">
                 </li>
-                <li class="profile-name">
+                <li class="user-menu-profile-name">
                     Hamilton de Souza
                 </li>
             </menu>
