Add content interaction style

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>            
             <menu class="user-menu">
                 <li class="notification-icon">
-                    <span class="material-symbols-outlined">notifications_active</span>
+                    <button type="button"><span class="material-symbols-outlined">notifications_active</span></button>
                 </li>
                 <li class="user-menu-profile-icon">
                     <img src="./img/hamilton-icon.jpg" alt="Hamilton profile icon.">
@@ -37,9 +37,9 @@
                 </div>
             </div>
             <menu class="content-interaction">
-                <li><button type="button" class="new-button">New</button></li>
-                <li><button type="button" class="upload-button">Upload</button></li>
-                <li><button type="button" class="share-button">Share</button></li>
+                <li><button type="button" class="content-interaction-button new-button">New</button></li>
+                <li><button type="button" class="content-interaction-button upload-button">Upload</button></li>
+                <li><button type="button" class="content-interaction-button share-button">Share</button></li>
             </menu>
         </header>
         <div class="sidebar">
