--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="sidebar">
             <div class="dashboard-logo">
                 <div class="dashboard-icon">
-
+                    <span class="material-symbols-outlined">dashboard</span>
                 </div>
                 <div class="dashboard-name">
                     Dashboard
@@ -56,7 +56,7 @@
                     <li class="home-page">
                         <button type="button" class="home-button">
                             <span class="material-symbols-outlined">home</span>
-                            Home
+                            <div>Home</div>
                         </button>
                     </li>
                     <li class="profile-page">
