Add your projects styles

--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
                 </div>
             </div>
             <div class="trending-projects">
+                <div class="content-title">Trending</div>
                 <div class="trending-project">
                     <div class="trending-profile-icon">
                         <img src="./img/hamilton-icon.jpg" alt="Hamilton profile icon.">
