Add trending styles

--- a/index.html
+++ b/index.html
@@ -265,48 +265,50 @@
             </div>
             <div class="trending-projects">
                 <div class="content-title">Trending</div>
-                <div class="trending-project">
-                    <div class="trending-profile-icon">
-                        <img src="./img/hamilton-icon.jpg" alt="Hamilton profile icon.">
+                <div class="trending-board">
+                    <div class="trending-project">
+                        <div class="trending-profile-icon">
+                            <img src="./img/hamilton-icon.jpg" alt="Hamilton profile icon.">
+                        </div>
+                        <div class="trending-profile-name">
+                            @hamilton
+                        </div>
+                        <div class="trending-project-name">
+                            super-cool-project
+                        </div>
                     </div>
-                    <div class="trending-profile-name">
-                        @hamilton
+                    <div class="trending-project">
+                        <div class="trending-profile-icon">
+                            <img src="./img/jiraiya-icon.jpg" alt="Jiraiya profile icon.">
+                        </div>
+                        <div class="trending-profile-name">
+                            @jiraiya
+                        </div>
+                        <div class="trending-project-name">
+                            life-changing-app
+                        </div>
                     </div>
-                    <div class="trending-project-name">
-                        super-cool-project
+                    <div class="trending-project">
+                        <div class="trending-profile-icon">
+                            <img src="./img/immperatriz-icon.jpg" alt="Immperatriz profile icon.">
+                        </div>
+                        <div class="trending-profile-name">
+                            @immperatriz
+                        </div>
+                        <div class="trending-project-name">
+                            no-traffic-maker
+                        </div>
                     </div>
-                </div>
-                <div class="trending-project">
-                    <div class="trending-profile-icon">
-                        <img src="./img/jiraiya-icon.jpg" alt="Jiraiya profile icon.">
-                    </div>
-                    <div class="trending-profile-name">
-                        @jiraiya
-                    </div>
-                    <div class="trending-project-name">
-                        life-changing-app
-                    </div>
-                </div>
-                <div class="trending-project">
-                    <div class="trending-profile-icon">
-                        <img src="./img/immperatriz-icon.jpg" alt="Immperatriz profile icon.">
-                    </div>
-                    <div class="trending-profile-name">
-                        @immperatriz
-                    </div>
-                    <div class="trending-project-name">
-                        no-traffic-maker
-                    </div>
-                </div>
-                <div class="trending-project">
-                    <div class="trending-profile-icon">
-                        <img src="./img/alysha-icon.jpg" alt="Alysha profile icon.">
-                    </div>
-                    <div class="trending-profile-name">
-                        @alysha
-                    </div>
-                    <div class="trending-project-name">
-                        world-peace-builder
+                    <div class="trending-project">
+                        <div class="trending-profile-icon">
+                            <img src="./img/alysha-icon.jpg" alt="Alysha profile icon.">
+                        </div>
+                        <div class="trending-profile-name">
+                            @alysha
+                        </div>
+                        <div class="trending-project-name">
+                            world-peace-builder
+                        </div>
                     </div>
                 </div>
             </div>
